# Audio-Processing-ML

./: .gitignore  README.md  Sentiment_Analysis_using_RNN.ipynb  api_secrets.py  audio_classification.ipynb  audio_classification_preprocessing.ipynb  audio_classification_preprocessing_model_creation.ipynb  intensity-timbre.ipynb  load_mp3.py  main.py  pyproject.toml  record_mic.py  simpleAI_transcript.py  speech_emotion_recognition.ipynb
