[project]
name = "audio-processing-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.32.5",
]
