[project]
name = "audio-processing-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "librosa>=0.9.2",
    "matplotlib>=3.3.4",
    "numpy>=1.19.5",
    "pandas>=0.25.3",
    "pyaudio>=0.2.14",
    "seaborn>=0.11.2",
    "torch>=1.5.1",
    "torchaudio>=0.10.2",
    "transformers>=4.18.0",
]
