[project]
name = "audio-processing-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "accelerate>=0.26.0",
    "librosa>=0.9.2",
    "matplotlib>=3.3.4",
    "numpy>=1.19.5",
    "pandas>=0.25.3",
    "pyaudio>=0.2.14",
    "seaborn>=0.11.2",
    "soundata>=1.0.1",
    "torch>=1.5.1",
    "torchaudio>=0.10.2",
    "transformers[torch]>=4.18.0",
]
